[package]
name = "aquatic-crawler"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Crawler tool for the Aquatic BitTorrent tracker API"
keywords = ["aquatic", "crawler", "parser", "bittorrent", "magnet"]
categories = ["network-programming"]
repository = "https://github.com/YGGverse/aquatic-crawler"
# homepage = "https://yggverse.github.io"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
hyper-util = "0.1.14"
librqbit = {version = "8.1.0", features = ["disable-upload"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = "0.3"
url = "2.5.4"
