[package]
name = "aquatic-crawler"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Crawler for Aquatic BitTorrent tracker based on librqbit API"
keywords = ["aquatic", "librqbit", "rqbit", "crawler", "bittorrent"]
categories = ["network-programming"]
repository = "https://github.com/YGGverse/aquatic-crawler"
# homepage = "https://yggverse.github.io"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hyper-util = "0.1"
librqbit = {version = "9.0.0-beta.0", features = ["disable-upload"]}
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = "0.3"
url = "2.5"
walkdir = "2.5"
[patch.crates-io]
librqbit = { git = "https://github.com/ikatson/rqbit.git", package = "librqbit" }
#librqbit = { version = "9.0.0-beta.0", path = "../../rqbit/crates/librqbit", package = "librqbit" }